# MedBrains

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  Healthcare_Blog_Platform_Features.xlsx  Makefile  MedBrains_Blog_Content_Plan.xlsx  MedBrains_Features.xlsx  MedBrains_Features_v1_backup.xlsx  ~$MedBrains_Features.xlsx
healthpulse/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  biome.json  package.json  pnpm-lock.yaml
healthpulse/apps/web/: astro.config.mjs  package.json
healthpulse/crates/cms-core/: Cargo.toml
healthpulse/crates/cms-db/: Cargo.toml
healthpulse/crates/cms-server/: Cargo.toml
medbrains/: .dockerignore  .env.example  .env.production  .gitignore  API_INTEGRATION_AUDIT.md  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  ROADMAP.md  SPRINT_WEEK_1_2.md  biome.json  config.toml.example  deny.toml  deploy.sh  docker-compose.yml  package.json  rustfmt.toml  tsconfig.base.json  turbo.json
medbrains/.githooks/: pre-commit-migrations.sh
medbrains/.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
medbrains/.github/workflows/: ci.yml  release.yml  security.yml  spicedb-validate.yml
medbrains/.sqlx/: query-0c21e52a5e00d5aebca9944862b046f4d82e501175d1e0890c3c480a9f39f694.json  query-15c5e06235ffe49db69f0c589a9f89b2805e9c56a716ace1edf05ab6900c6aab.json  query-1b7788bececeeba67ca5dc7d6f2ea58ec64fab6dd71c0a889b04a89b441bfe36.json  query-1d1bcb5a42f0685f95beb2f2b3c2d0105fba1740daf889c87885a251dda404a8.json  query-25d806a4d88ee64be55e32110441b32d8e12438533a935270d6bc913467f8c72.json  query-2d3f169b43772fce1550d7109ae11703700b79a37ae021ba2a39ec4371f4d99c.json  query-4055251e4c771563e98a9e7649be1797c3572bd500e4efc54cb53bc176b99217.json  query-424fc0c661d4eab35a653fffeca860bd79b8d40616730029c3eefdbab994449e.json  query-4256e5bf3f4b3c128fee7774afcd489bd101edf9fca1e6a3960428a783394e49.json  query-4414d6d431f910eeb8224baddd5b3c610b06980ddacf60b916ecbe9ae83b5b4c.json  query-45f12cf3dcfac15b21896853ed4f513d21e1dc15832d5b827b19a1954056ffda.json  query-48c08bed2639f880f47fb7909187851885d0e234901d1d81ee988557129fda03.json  query-49e57d6a22eee5596c5e7cf482e240af5cbe2a0c79eb1c9ced7916c3ad016af4.json  query-5649bdf154b2220727c6ed4be6f4d50e5812ef52719a4c5c3ad16b852f18eba8.json  query-5ee9cd79ce642fe979eb0c817b16374747cb229b0a4559b1affd28aa58a4cde8.json  query-603335b1903d09a6ed71e890e1ec32cd5ac788d4421bb786bf2834e8cc6f2c37.json  query-60cdea7a5f97de59f33b630699cc6080ff8acf11aaaa234e0fc09a22747a926e.json  query-744bfd750eb1d917a9b0518da13faf7044167ce8ec6e0171bbdfb1c459afbf4d.json  query-75a081c07b9f4ff6bd495e5e608546f64c88c212eeb5068ff2650ba258fc5b41.json  query-7abbad366765d82f00a7354b2e655d631f312a73f317464d23a617dd95b75480.json  query-828fc13895a932131ec45db120d18c2f2de5f181a89951df193eeff1e7123719.json  query-857654efe6825a53df64546237b3ca55bf83b6b79dd527773acef303a0382c58.json  query-863169cd0681bd36d3f4d04e5702c4dbe3401c322e72a966b2c8db80446e2970.json  query-89075e77a31d0a219c2e13cd434b673d72c97dff7b38ffb1d9db4db0a3f44b86.json  query-8930b52270b86c7bad2a70ddf57bfe331ddf2305108910e67e6eb35e7d9d0a19.json  query-8d59f91cff6e45c008deec21f4c4168be827418c9157d09e35840d56f4749cc9.json  query-8f471e30b1522f102f51ab2e04d2aede289b16269f6923b4047a9b673fd9df22.json  query-91123b9f6285714d573b697823805bedddea9ba278cec49f68411998452feb48.json  query-9161abb378fed249e03a30b0b62e99bc606875e55398fe30fe52cdfe37c04eb7.json  query-94008edbb8788dc846ce413d413010192ea292fd062f985c0223eac9bddf2174.json  query-9b2492c8fac4af6f8aa1573fd99fc43e2b15f53d97382a66a3a7064d041576a4.json  query-9cced6ef7bc4122610b2f10826ddc60bc3d6ece006c7da81fcb0bf67afd2adbf.json  query-9fba03d5913c4144141478ff6474cc1e1e3029c4f70d89d638326af4b71ea481.json  query-a02907c015f3196422ef0493bf09855ea0960299ddd18b1a2a44885ec3aced5c.json  query-a46c14a664b4e834588655110113843dd1d658ea8e568c8a0d43af8ebd7ad2c5.json  query-a9773f03bcd0d3af23e24f765a2004675db53be9e5b2d0f683a6fb7b68ea928f.json  query-ac1118ec50c71e2e4c76ec445724fe08bb6dde6daba3b3e4de05fc6609431b90.json  query-ad571d931d5c141b2512430a07c9117589d5325688d4e8d45a1a35f66fe8127e.json  query-b06eb831e350512e968869ceb02dca8d13ea70f89d58f910569e5c176e9c8946.json  query-b081a17ec08e28b860ad8a1e0b8f9efb57cba187331f1afcea3206fd512bcfb3.json  (+28 more)
medbrains/RFCs/: RBAC-POLICY-MATRIX.md
medbrains/apps/edge/: Cargo.toml
medbrains/apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
medbrains/apps/mobile-patient/: App.tsx  README.md  app.json  eas.json  package.json
medbrains/apps/mobile-staff/: App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
medbrains/apps/mobile-vendor/: App.tsx  README.md  app.json  package.json
medbrains/apps/tv/: App.tsx  README.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json
medbrains/apps/web/: .env.example  .gitignore  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
medbrains/cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
medbrains/docker/: init-kiwi-db.sh
medbrains/docs/: Alagappa_Pitch copy.pptx
medbrains/infra/: Caddyfile.backup
medbrains/qa/: README.md  cargo-to-allure.py  coverage-report.py  requirements.txt  sync.py
medbrains/runbooks/: audit-chain-verify.md  headscale-ops.md  hybrid-cutover.md  mobile-crdt-integration.md  offline-mode-dev.md  patroni-failover.md  sprint-b-cutover.md  wal-recovery.md
medbrains/scripts/: analyze_pending_modules.py  build_alagappa_deck.py  check_file_lengths.py  check_nav_drift.py  export_device_support_tracker_source.py  fix_aria_labels.py  hybrid-smoke.sh  i18n_extract.py  i18n_fix_subcomponents.py  i18n_fix_syntax.py  i18n_patch_pages.py  i18n_revert_const.py  import_lgd_districts.py  read_features.py  search_features.py  search_features_refined.py  test_device_ingest.sh  update_billing_phase2b.py  update_camp.py  update_consent.py  update_front_office_status.py  update_icu_status.py  update_ipd_phase3b_excel.py  update_security.py
medbrains/test-results/: .last-run.json
(+4913 files in other folders)
