[package]
name = "cms-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
cms-core = { path = "../cms-core" }
cms-db = { path = "../cms-db" }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Misc
dotenvy = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
