[package]
name = "medbrains-edge-app"
description = "Edge appliance binary — runs medbrains-edge sync server + mDNS announcement on a hospital LAN box"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[[bin]]
name = "medbrains-edge"
path = "src/main.rs"

[dependencies]
medbrains-edge = { path = "../../crates/medbrains-edge" }

tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
mdns-sd = { workspace = true }
futures = { workspace = true }

clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

[lints]
workspace = true
