[package]
name = "medbrains-adapter-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SDK for building MedBrains device adapter plugins (WASM)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
