[package]
name = "medbrains-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MedBrains device bridge runtime — connects medical devices to MedBrains HMS"

[[bin]]
name = "medbrains-bridge"
path = "src/main.rs"

[dependencies]
medbrains-adapter-sdk = { path = "../medbrains-adapter-sdk" }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client (for MedBrains API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# SQLite buffer
rusqlite = { version = "0.31", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Hostname detection
hostname = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Hybrid transport (Headscale tailnet + WSS fallback to bridge-ingress)
async-trait = { workspace = true }
url = { workspace = true }
