[package]
name = "medbrains-core"
description = "Domain types for MedBrains HMS — zero framework dependencies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }

# Hybrid deploy mode infrastructure (deploy_mode + secrets +
# audit_sink + object_store + jwt_signer modules). tokio for async fs;
# async-trait for the trait Sigs; ed25519-dalek for the local JWT
# signer. These are runtime traits, not domain types — the crate
# description still holds for the rest of the modules.
tokio = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
