[package]
name = "medbrains-db-topology"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
