[package]
name = "medbrains-db"
description = "PostgreSQL layer for MedBrains HMS — SQLx compile-time queries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
medbrains-core = { path = "../medbrains-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
log = "0.4"

[lints]
workspace = true
