[package]
name = "medbrains-edge-rn"
description = "React Native bridge for the Loro CRDT engine. Same wire format as medbrains-edge so mobile + TV apps share offline behavior with web."
version.workspace = true
# UniFFI 0.28 emits the pre-2024 `#[no_mangle]` attribute syntax, so
# we pin this crate to edition 2021. Bump together with UniFFI 0.29+
# once the bindgen-react-native ecosystem catches up.
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"

[lib]
# Both crate types — `staticlib` for iOS, `cdylib` for Android. UniFFI
# generates the JS bindings from the same Rust ABI.
crate-type = ["staticlib", "cdylib", "rlib"]

# UniFFI generates `extern "C"` FFI symbols + `#[no_mangle]` exports
# that require `unsafe`. Override the workspace's `unsafe_code =
# forbid` here — the unsafe surface is contained to the
# UniFFI-generated scaffolding, our own code stays safe.
[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "deny"
inefficient_to_string = "deny"
manual_let_else = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"
wildcard_imports = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

[dependencies]
loro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
uuid = { workspace = true }

# UniFFI — Mozilla's Rust → Kotlin/Swift/JS binding generator. The
# RN integration uses the autogenerated TypeScript binding (via
# uniffi-bindgen-react-native).
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
