[package]
name = "medbrains-offline-core"
description = "Shared offline auth + permissions for the hospital edge stack. Read-only ReBAC cache, JWT verification, and revocation tracking — same Rust runs on the edge server, mobile (UniFFI), TV, and any future device class."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }

# Persistent embedded KV + in-memory LRU. Same versions the edge
# crate has been using since PR #9 — bump together when needed.
sled = "0.34"
lru = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
