[package]
name = "medbrains-outbox"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
