[package]
name = "medbrains-server"
description = "Axum HTTP server for MedBrains HMS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
medbrains-core = { path = "../medbrains-core" }
medbrains-db = { path = "../medbrains-db" }
medbrains-yottadb = { path = "../medbrains-yottadb" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
ed25519-dalek = "2"
getrandom = { version = "0.3", features = ["std"] }
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
futures = { workspace = true }
ipnet = "2"

[lints]
workspace = true
